--- a/first.html
+++ b/first.html
@@ -1,4 +1,6 @@
 
+<meta charset="utf-8">
+
 <h1>HTML</h1>
 HTML이란 Hypertext Markup Language의 약자로, 웹 페이지와 웹 어플리케이션들을 만들때 가장 기본적으로 사용되는 마크업 언어이다.
 일단 이렇게 텍스트만 쓰더라고 바로 반영되어 브라우저로 열리기 때문에 메모장이랑 별반 다를것이 없다.(모든 언어도 다 메모장에서 깨짐 없이 열리기 때문에 당연한 결과이다.)
@@ -43,4 +45,12 @@ br을 쓰면 줄바꿈이 된다. 하지만 문단을 나누는게 가장 좋기
         <li>결과이다.</li>
     </ol>
     보이다시피 ul은 점을 찍어주고, ol은 숫자를 매겨준다. 그리고 ol과 ul 모두 옆에서 한칸 띄어쓰기를 해 준다. 위의 li만 사용한 결과와 비교하면 된다.
+</p>
+
+<p>
+    브라우저를 열고 나서, 사이트에 들어가면 브라우저의 탭에 사이트의 이름이 뜬다. yutube나 naver도 그러하다. 만약 이러한 타이틀을 정해 놓지 않으면 지금 현재 내가 작성하고 있는 html파일의 파일이름이
+    사이트의 이름이 된다. 물론 파일이름을 신경써서 잘 적으면 해결 가능하지만, 그것보다 title 태그를 사용하면 바로 가능하다.
+    <title>First Web Study<br></title>
+    지금 이 문단에서 title 태그를 사용했으며, 이와 같이 어디서든 사용 가능한 것 같다. 하지만 역시 코드의 가독성을 위해서 title키워드는 맨 위 첫줄에 작성하는 것이 좋겠다.<br>
+    또 지금 안 정보가 있는데, br을 쓰지 않는 이상 무조건 줄바꿈(내가 작성중인 html파일에서의 줄바꿈(엔터키))은 띄어쓰기가 되는 것 같다.
 </p>
