--- a/first.html
+++ b/first.html
@@ -86,6 +86,15 @@
         애초에 그림의 맨 밑단을 기준으로 글자가 써 지기 때문에 소용 없는 실험이었다...!! 완전히 글자와 같은 취급. 그저 크기가 큰 글자인 수준이다.<br>
         한글로 따지면 글자와 같이 취급 설정이 체크되어 있는것과 같다.(컴퓨터 입장에선 그림이나 글이나 같은 리소스이긴 하다....)
     </p>
+    <p>
+        링크를 다는 방법은 a 이다. a태그를 사용하여 링크를 달 수 있는데, 먼저 a태그로 감싼 택스트는 클릭하면 주소로 갈 수 있는 문자를 이야기 한다. 이 역시 닷(앵커)을 내려야 가능한데,<br>
+        이 기능을 수행하는 것이 href라는 속성이다. href는 hypertext reference의 약자이다. 즉 a에 href라는 속성으로 주소를 주면 링크를 달 수 있다.<br>
+        (일반 링크 사용)<a href="https://www.w3.org/TR/html5">Hypertext Markup Language (HTML)</a><br>
+        위의 링크는 w3c라는, html권고안을 만드는 곳의 사이트 링크이다. 만약, 새 탭으로 열게 하고 싶다면 a에 target속성을 "_blank"로 달아주면 된다.<br>
+        (새 탭으로 열기)<a href="https://www.w3.org/TR/html5" target="_blank">Hypertext Markup Language (HTML)</a><br>
+        마우스를 가져다 대면 툴팁이 나오게도 할 수 있다. 이는 title속성을 추가하여 사용할 수 있다.
+        (툴팁 추가)<a href="https://www.w3.org/TR/html5" target="_blank" title="HTML5 specification">Hypertext Markup Language (HTML)</a><br>
+    </p>
     </body>
     
 </html>
